<resources>
    <string name="app_name" translatable="false">EasyRoute</string>
    <string name="NAMESPACE" translatable="false">http://tempuri.org/</string>
    <string name="nombreBD" translatable="false">baseLocal.db</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="bt_iniciar">Iniciar sesión</string>
    <string name="tt_configuracion">Configuración</string>
    <string name="tl_conf1">Servidor, ruta e impresora</string>
    <string name="tl_conf2">Servidor</string>
    <string name="tl_conf3">Utilidad</string>
    <string name="hint_servidorDir">Dirección del servidor</string>
    <string name="hint_timeOut">Tiempo de espera/TimeOut (ms)</string>
    <string name="bt_prueba">Prueba WebService</string>
    <string name="hint_ruta">Ruta</string>
    <string name="hint_impresora">Dir. MAC Impresora</string>
    <string name="bt_listar">Listar</string>
    <string name="bt_pruebaImp">Prueba</string>
    <string name="bt_salir">Salir</string>
    <string name="bt_guardar">Guardar</string>
    <string name="bt_selecTodo">Seleccionar todo</string>
    <string name="bt_deselecTodo">Deselec. todo</string>
    <string name="bt_sincronizar">Sincronizar</string>
    <string name="hint_folio">Folio</string>
    <string name="hint_pagos">Pagos</string>
    <string name="hint_credito">Crédito</string>
    <string name="bt_realizar">Realizar</string>
    <string name="bt_reacdia">ReAc.Día</string>
    <string name="hint_preventa">Preven.</string>
    <string name="bt_venta">Venta</string>
    <string name="bt_reacped">ReAc.Ped</string>
    <string name="bt_actaudi">Ac.Audit</string>
    <string name="bt_desaudi">Des.Audi</string>
    <string name="hint_filtro">Filtro</string>
    <string name="bt_buscar">Buscar</string>
    <string name="bt_borrar">Borrar</string>
    <string name="bt_reimprimir">Reimprimir</string>
    <string name="bt_actCliente">Act. Cliente</string>
    <string name="bt_seleccionar">Seleccionar</string>
    <string name="bt_ver">Ver</string>
    <string name="iv_descripcion">Imagen</string>
    <string name="hint_empresa">Empresa</string>
    <string name="bt_validar">Validar</string>
    <string name="bt_imprimir">Imprimir</string>
    <string name="bt_regresar">Regresar</string>
    <string name="bt_enviar">Enviar</string>
    <string name="bt_aplicar">Aplicar</string>
    <string name="hint_sugerido">Ingresa una cantidad</string>
    <string name="msg_actualizaSuge">Actualiza sugerido</string>
    <string name="msg_actualizaSuge2">Valor anterior</string>
    <string name="bt_aceptar">Aceptar</string>
    <string name="bt_cancelar">Cancelar</string>
    <string name="bt_calcular">Calcular</string>
    <string name="hint_ventasDia">Ventas del día</string>
    <string name="hint_ventasContado">Ventas contado</string>
    <string name="hint_ventasCredito">Ventas crédito</string>
    <string name="hint_cobranza">Cobranza</string>
    <string name="hint_ventasEntregar">Entregar a caja</string>
    <string name="bt_impPre">Imp. x Pre</string>
    <string name="bt_impSku">Imp. x SKU</string>
    <string name="tv_cerveza">Cerveza: </string>
    <string name="tv_otros">Otros: </string>
    <string name="tv_clave">Clave</string>
    <string name="tv_folio">Folio</string>
    <string name="tv_fecha">Fecha</string>
    <string name="tv_solicito">Solicito</string>
    <string name="tv_observacion">Observación</string>
    <string name="tv_nuevoEstado">Nuevo estado</string>
    <string name="tv_frecuencia">Frecuencia</string>
    <string name="tv_coordenada">Coordenada</string>
    <string name="bt_ubicacion">Ubicación</string>
    <string name="tv_valorDefecto0">0.00</string>
    <string name="tv_credito">Crédito</string>
    <string name="tv_monto">Monto</string>
    <string name="tv_abono">Abono</string>
    <string name="tv_saldo">Saldo</string>
    <string name="tv_ejemplo">Ejemplo</string>
    <string name="bt_quitar">Quitar</string>
    <string name="bt_editar">Editar</string>
    <string name="bt_subir">Subir</string>
    <string name="bt_bajar">Bajar</string>
    <string name="bt_agregar">Agregar</string>
    <string name="tv_saldoRuta">Saldo ruta: </string>
    <string name="hint_sku">SKU</string>
    <string name="hint_cantidad">Cantidad</string>
    <string name="bt_correcto">✓</string>
    <string name="bt_incorrecto">x</string>
    <string name="hint_tipoRuta">Tipo ruta</string>
    <string name="hint_vendedor">Vendedor</string>
    <string name="tv_hora">Hora</string>
    <string name="hint_camion">Camión</string>
    <string name="hint_kilometraje">Kilometraje</string>
    <string name="hint_noRuta">Sin ruta</string>
    <string name="mPadre_inicio">Inicio</string>
    <string name="mPadre_inventario">Inventario</string>
    <string name="mPadre_pedidos">Pedidos</string>
    <string name="mPadre_entregas">Entregas</string>
    <string name="mPadre_reportes">Reportes</string>
    <string name="mPadre_clientes">Clientes</string>
    <string name="mPadre_findia">Fin de día</string>
    <string name="mPadre_configuracion">Configuración</string>
    <string name="mHijo_principal">Pantalla principal</string>
    <string name="mHijo_inicioDia">Inicio de día</string>
    <string name="mHijo_cargaIni">Carga inicial</string>
    <string name="mHijo_inventario">Inventario</string>
    <string name="mHijo_recarga">Recarga</string>
    <string name="mHijo_devoluciones">Devoluciones</string>
    <string name="mHijo_descarga">Descarga</string>
    <string name="mHijo_consigna">Consigna</string>
    <string name="mHijo_pedido">Pedido</string>
    <string name="mHijo_devolucion">Devolución</string>
    <string name="mHijo_arqueo">Arqueo</string>
    <string name="mHijo_ventasDia">Ventas día</string>
    <string name="mHijo_cartera">Cartera</string>
    <string name="mHijo_ordClientes">Ord. Clientes</string>
    <string name="mHijo_busClientes">Busq. Clientes</string>
    <string name="mHijo_sugerido">Sugerido</string>
    <string name="mHijo_transmitir">Transmitir</string>
    <string name="mHijo_borrarDatos">Borrar datos</string>
    <string name="mHijo_finVentas">Fin de ventas</string>
    <string name="mHijo_catalogos">Catálogos</string>
    <string name="msg_webservice">Conectando</string>
    <string name="msg_webserviceDescarga">Descargando</string>
    <string name="sp_selecRuta">Seleccione una ruta</string>
    <string name="tl_iniDia1">Generales</string>
    <string name="tl_iniDia2">Datos</string>
    <string name="tl_venta1">Productos vendidos</string>
    <string name="tl_venta2">Total dinero</string>
    <string name="tl_cart1">Clientes</string>
    <string name="tl_cart2">Saldos</string>
    <string name="tl_orde1">Clientes del día</string>
    <string name="tl_orde2">Clientes fuera</string>
    <string name="title_buscli">Buscar clientes</string>
    <string name="tv_saldoCliente">Saldo cliente: </string>
    <string name="diasSemana">Lunes,Martes,Miércoles,Jueves,Viernes,Sábado,Domingo  </string>
    <string name="msg_cargando">Cargando</string>
    <string name="msg_importante">Importante</string>
    <string name="msg_salir">¿Desea salir de la aplicación?</string>
    <string name="msg_si">Si</string>
    <string name="msg_no">No</string>
    <string name="tt_opNodispo">Opción no disponible</string>
    <string name="msg_espera">Por favor espera</string>
    <string name="tl_sug1">Familia</string>
    <string name="tl_sug2">Presentación</string>
    <string name="tl_sug3">Producto</string>
    <string name="tl_sug4">Sugerido</string>
    <string name="msg_autoriza">Autorización</string>
    <string name="msg_borrar">Borrado de datos</string>
    <string name="msg_confirmaBorrar">¿Esta seguro de eliminar los datos?</string>
    <string name="msg_findia">¿Desea finalizar el día?</string>
    <string name="msg_findiaMen">No ha realizado la descarga.</string>
    <string name="msg_cerrarVen">¿Esta seguro de cerrar la venta?</string>
    <string name="msg_cerrarVen2">Al realizar esta acción no podra realizar ninguna venta, cobranza o movimiento alguno.</string>
    <string name="sp_carga">Seleccione una</string>
    <string name="msg_aplicarCarga">¿Esta seguro de aplicar la {0} con folio {1}?</string>
    <string name="msg_impInv">¿Imprimir inventario?</string>
    <string name="msg_confDescarga">La descarga solo puede realizarse a partir de las 2 de la tarde, ¿Desea continuar?</string>
    <string name="msg_descargaDos">Ya se realizo una descarga, ¿Desea volver a realizarla?</string>
    <string name="msg_noVenta">Motivo de no venta</string>
    <string name="msg_noLectura">Motivo de no lectura</string>
    <string name="bt_actClientes">Actualiza clientes</string>
    <string name="graf_ventas">Ventas</string>
    <string name="graf_efectividad">Efectividad</string>
    <string name="title_detalles">Detalles</string>
    <string name="msg_error">Algo salio mal</string>
    <string name="table_totalPago">Total pago</string>
    <string name="table_monto">Monto</string>
    <string name="table_sku">SKU</string>
    <string name="table_descripcion">Descripción</string>
    <string name="table_lp">LP</string>
    <string name="table_total">Total</string>
    <string name="table_selec">Sel.</string>
    <string name="table_catalogo">Catálogo</string>
    <string name="table_estado">Estado</string>
    <string name="table_suge">Sug.</string>
    <string name="table_producto">Producto</string>
    <string name="table_familia">Familia</string>
    <string name="table_cantidad">Cantidad</string>
    <string name="table_cliente">Cliente</string>
    <string name="table_nombre">Nombre</string>
    <string name="table_secu">Secu.</string>
    <string name="table_frecc">Frec.</string>
    <string name="table_coordenada">Coor</string>
    <string name="table_dia">DiaSem</string>
    <string name="table_invent">Inv.</string>
    <string name="table_devolucion">Dev.</string>
    <string name="table_cantidad2">Can.</string>
    <string name="table_cve">CVE</string>
    <string name="table_prodCve">Pr.Cve</string>
    <string name="table_negocio">Negocio</string>
    <string name="table_saldo">Saldo</string>
    <string name="table_razon">Razon social</string>
    <string name="table_idExt">Id Ext</string>
    <string name="catalogos1">Empresas,Estatus,Roles,RolesModulos,Modulos,Usuarios,TipoRutas,Rutas</string>
    <string name="catalogos2">CondicionesVenta,Productos,Rutas,ListaPrecios,PrecioProductos,FormasPago,FrecuenciasVisita,Categorias,Familias,Presentaciones,Promociones,PromocionesKit</string>
    <string name="catalogos3">LimpiarDatos,Empresas,Estatus,Roles,RolesModulos,Modulos,Usuarios,TipoRutas,Rutas,Marcas,Unidades,CondicionesVenta,Productos,ListaPrecios,PrecioProductos,NivelCliente,FormasPago,FrecuenciasVisita,MotivosNoVenta,MotivosNoLectura,Categorias,Familias,Presentaciones,Clientes,Creditos,Direcciones,ClientesVentaMes,Promociones,PromocionesKit,Consignas</string>
    <string name="catalogos4">,Preventa</string>
    <string name="title_inventario1">Descarga de inventario</string>
    <string name="title_inventario2">Inventario actual</string>
    <string name="bt_descargar">Descargar</string>
    <string name="msg_impSku">¿Imprimir por sku?</string>
    <string name="msg_impPre">¿Imprimir por precio?</string>
    <string name="error1">Error al abrir inicio de sesión</string>
    <string name="msg_advertencia">Advertencia</string>
    <string name="tt_camposVacios">Rellena todos los campos</string>
    <string name="error2">Error al iniciar sesión</string>
    <string name="error3">Error al obtener roles</string>
    <string name="error4">Error al almacenar información</string>
    <string name="error5">Error al guardar usuario</string>
    <string name="error6">Error al guardar usuario</string>
</resources>