<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/t_cliente"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_cliente"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/t_nombre"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_nombre"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/t_secu"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_secu"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/t_frec"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_frecc"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/t_estatus"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_estado"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/t_coor"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_coordenada"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/t_dia"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_dia"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

</TableRow>