<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/t_dev_cve_n"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_cve"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/t_prod_cve_n"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_prodCve"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/t_prod_sku_str"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_sku"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/t_prod_desc_str"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_descripcion"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/t_prod_cant_n"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_cantidad"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

</TableRow>