<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/ti_sku"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_sku"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/ti_producto"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_producto"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        />

    <TextView
        android:id="@+id/ti_inv"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_invent"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/ti_dev"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_devolucion"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/ti_can"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_cantidad2"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

</TableRow>