<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="10"
    >

    <TextView
        android:id="@+id/t_sku"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:maxLines="1"
        android:text="@string/table_sku"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/t_descripcion"
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/table_descripcion"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/t_lp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:maxLines="1"
        android:text="@string/table_lp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/t_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:maxLines="1"
        android:text="@string/table_total"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

</TableRow>