<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout17"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ventanas.Configuracion.UtilidadFragment">


    <LinearLayout
        android:id="@+id/lyFolio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/paddingGeneral"
        android:layout_marginEnd="@dimen/paddingGeneral"
        android:layout_marginTop="@dimen/paddingGeneral"

        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:theme="@style/EditTextBlack">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_folio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_folio"
                android:singleLine="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_ver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/bt_ver"
            android:theme="@style/RaisedButtonDark"
            android:tag="deselec"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/lyFolio"
        app:layout_constraintBottom_toTopOf="@id/ti_pagos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/paddingGeneral"
        android:layout_marginEnd="@dimen/paddingGeneral"
        >



    </ScrollView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_pagos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextBlack"

        app:layout_constraintBottom_toTopOf="@id/ti_credito"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/paddingGeneral"
        android:layout_marginEnd="@dimen/paddingGeneral"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pagos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pagos"
            android:singleLine="true"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_credito"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextBlack"
        app:layout_constraintBottom_toTopOf="@id/lyBotones1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/paddingGeneral"
        android:layout_marginEnd="@dimen/paddingGeneral"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_credito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_credito"
            android:singleLine="true"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/lyBotones1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8"

        app:layout_constraintBottom_toTopOf="@id/lyBotones2"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/paddingGeneral"
        android:layout_marginEnd="@dimen/paddingGeneral"
        >

        <Button
            android:id="@+id/button_realizar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/bt_realizar"
            android:theme="@style/ButtonDarkSmall"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_radia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/bt_reacdia"
            android:theme="@style/ButtonDarkSmall"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/button_preventa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/hint_preventa"
            android:theme="@style/ButtonDarkSmall"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/button_venta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/bt_venta"
            android:theme="@style/ButtonDarkSmall"
            tools:ignore="ButtonStyle"
            />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/lyBotones2"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/paddingGeneral"
        android:layout_marginEnd="@dimen/paddingGeneral"
        android:layout_marginBottom="@dimen/paddingGeneral"
        >

        <Button
            android:id="@+id/button_rapedido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/bt_reacped"
            android:theme="@style/ButtonDarkSmall"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/button_aauditoria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/bt_actaudi"
            android:theme="@style/ButtonDarkSmall"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/button_dauditoria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/bt_desaudi"
            android:theme="@style/ButtonDarkSmall"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/button_salir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/bt_salir"
            android:theme="@style/ButtonDarkSmall"
            tools:ignore="ButtonStyle"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>