<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout15"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ventanas.PrincipalFragment">



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"

        android:padding="@dimen/paddingGeneral"
        android:layout_marginTop="@dimen/paddingGeneral"
        android:layout_marginStart="@dimen/paddingGeneral"
        android:layout_marginEnd="@dimen/paddingGeneral"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_usuario"
            android:textColor="@color/blanco"
            />

        <TextView
            android:id="@+id/tv_iniUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_ejemplo"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_ruta"
            android:textColor="@color/blanco"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_iniRuta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_ejemplo"
            android:textColor="@color/blanco"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_fecha"
            android:textColor="@color/blanco"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_iniFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_ejemplo"
            android:textColor="@color/blanco"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_hora"
            android:textColor="@color/blanco"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_iniHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_ejemplo"
            android:textColor="@color/blanco"
            android:textSize="20sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginStart="@dimen/paddingGeneral"
        android:layout_marginEnd="@dimen/paddingGeneral"
        android:layout_marginBottom="@dimen/paddingGeneral"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/intrucciones"
            android:contentDescription="@string/iv_descripcion"
            android:layout_gravity="center"
            >

        </ImageView>


    </LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>