<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="6"
    >

    <TextView
        android:id="@+id/tabla_numero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:maxLines="10"
        android:layout_column="0"
        android:layout_weight="1"
        android:text="@string/table_selec"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/tabla_montada"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:maxLines="10"
        android:layout_column="0"
        android:layout_weight="3"
        android:text="@string/table_catalogo"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/tabla_mm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:ellipsize="none"
        android:textSize="18sp"
        android:singleLine="false"
        android:scrollHorizontally="false"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:maxLines="10"
        android:layout_column="1"
        android:layout_weight="2"
        android:text="@string/table_estado"
        android:textColor="@color/colorPrimaryDark"
        />

</TableRow>